--- a/RosterChallenge/Views/Shared/_Layout.cshtml
+++ b/RosterChallenge/Views/Shared/_Layout.cshtml
@@ -30,5 +30,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+    @RenderSection("Styles", required: false)
+    @RenderSection("Dialogs", required: false)
 </body>
 </html>
