--- a/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
+++ b/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
@@ -2,8 +2,9 @@
 <div id="AddEditModal"class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">Add Artist</div>
+            <div class="modal-header fw-bold">Add Artist</div>
             <div class="modal-body">
+                @Html.Hidden("ID")
                 <div class="form-floating mt-2">
                     <input id="artist" class="form-control" placeholder="Artist Name" />
                     <label class="floatingInput" for="artist">Artist</label>
@@ -16,13 +17,14 @@
                     <input id="streams" type="number" class="form-control" placeholder="Streams" />
                     <label class="floatingInput" for="streams">Streams</label>
                 </div>
-                <div class="form-floating mt-2">
-                    <input id="artist" class="form-control" type="checkbox" />
+                <div class="mt-2">
+                    <input id="artist" type="checkbox" />
                     <label for="artist">Paid</label>
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="AddEditSaveButton">Save</button>
+                <button id="AddEditCancelButton">Cancel</button>
+                <button id="AddEditSaveButton">Save</button>
             </div>
         </div>
     </div>
