--- a/RosterChallenge/Views/Shared/Dialogs/_notificationModal.cshtml
+++ b/RosterChallenge/Views/Shared/Dialogs/_notificationModal.cshtml
@@ -1,5 +1,5 @@
-﻿<div id="confirmBackdrop" class="modal-backdrop"></div>
-<div id="confirmModal" class="modal">
+﻿<div id="NotificationBackdrop" class="modal-backdrop"></div>
+<div id="NotificationModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header fw-bold"></div>
@@ -7,8 +7,7 @@
                 
             </div>
             <div class="modal-footer">
-                <button id="ConfirmNoButton">No</button>
-                <button id="ConfirmYesButton">Yes</button>
+                <button id="NotificationOKButton">OK</button>
             </div>
         </div>
     </div>
