--- a/RosterChallenge/Views/Home/Index.cshtml
+++ b/RosterChallenge/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
 @section dialogs{
     <partial name="~/Views/Home/Dialogs/_addEditArtistModal.cshtml" />
     <partial name="~/Views/Shared/Dialogs/_confirmModal.cshtml" />
+    <partial name="~/Views/Shared/Dialogs/_notificationModal.cshtml" />
 }
 
 <Table class="fixed-header">
@@ -38,6 +39,7 @@
         $(document).ready(function () {
             closeAddEditModal();
             closeConfirmModal();
+            closeNotificationModal()
 
             //custom sort to handle checkboxes
             $.tablesorter.addParser({
@@ -94,7 +96,9 @@
             var ID = checkbox.closest("tr").data("id");
             var paid = checkbox.is(":checked");
             var artist = checkbox.closest("tr").find(".artist div").html();
-            
+            var revertCheckox = function () {
+                checkbox.prop('checked', !paid);
+            }
 
             openConfirmModal("Confirm Paid Status", "Would you like to update " + artist + " as " + (paid ? "paid?" : "unpaid?"), function () {
                 $.ajax({
@@ -102,17 +106,12 @@
                     url: '@Url.Action("updatePaidArtistByID", "Home")',
                     data: { ID: ID, paid: paid },
                     success: function (result) {
-                        if (result.success == true) {
-                            blankOutAddEditModal();
-                        }
-                        else {
-                           
+                        if (result.success != true) {
+                            openNotificationModal("Error Occurred", "An error occured while updating artist: " + result.error, revertCheckox);
                         }
                     }
                 });
-            }, function () {
-                checkbox.prop('checked', !paid);
-            });
+            }, revertCheckox);
         });
 
         $(".bi-pencil").on("click", function () {
@@ -132,7 +131,7 @@
                         openAddEditModal("Edit Artist");
                     }
                     else {
-
+                        openNotificationModal("Error Occurred", "An error occured while retrieving information for artist: " + result.error);
                     }
                 }
             });
@@ -150,9 +149,10 @@
                     success: function (result) {
                         if (result.success == true) {
                             $("tbody").find("tr[data-id='" + ID + "']").remove();
+                            $('table').trigger('update');
                         }
                         else {
-
+                            openNotificationModal("Error Occurred", "An error occured while deleting artist: " + result.error);
                         }
                     }
                 });
@@ -186,6 +186,10 @@
         });
 
         $("#AddEditSaveButton").on("click", function () {
+            if (!document.querySelector('#AddEditForm').reportValidity()) {
+                return;
+            }
+
             var URL;
             if ($("#ID").val() != "0") {
                 URL = '@Url.Action("UpdateArtist", "Home")';
@@ -203,11 +207,12 @@
                     if (result.success == true) {
                         refreshArtistRow(result.id);
                         blankOutAddEditModal();
+                        closeAddEditModal();
                     }
                     else {
-
+                        openNotificationModal("Error Occurred", "An error occured while saving: " + result.error);
                     }
-                    closeAddEditModal();
+                    
                 }
             });
         });
@@ -234,10 +239,30 @@
             }
 
             $("#ConfirmYesButton").off();
-            $("#ConfirmYesButton").on("click", function () { yesFunc(); closeConfirmModal(); })
+            $("#ConfirmYesButton").on("click", function () { yesFunc(); closeConfirmModal(); });
 
             $("#ConfirmNoButton").off();
-            $("#ConfirmNoButton").on("click", function () { noFunc(); closeConfirmModal(); })
+            $("#ConfirmNoButton").on("click", function () { noFunc(); closeConfirmModal(); });
+        }
+
+        ///////////Notification Modal//////////////
+        function closeNotificationModal() {
+            $("#NotificationModal.modal").hide();
+            $("#NotificationBackdrop.modal-backdrop").hide();
+        }
+
+        function openNotificationModal(title, message, OKFunc) {
+            $("#NotificationModal .modal-header").text(title);
+            $("#NotificationModal .modal-body").text(message);
+            $("#NotificationModal.modal").show();
+            $("#NotificationBackdrop.modal-backdrop").show();
+
+            if (typeof OKFunc !== 'function') {
+                OKFunc = function () { };
+            }
+
+            $("#NotificationOKButton").off();
+            $("#NotificationOKButton").on("click", function () { OKFunc(); closeNotificationModal(); });
         }
 
 
