move reusable modal's to their own script files, hide modal backgrounds by default

--- a/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
+++ b/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="AddEditBackdrop" class="modal-backdrop"></div>
+﻿<div id="AddEditBackdrop" class="modal-backdrop" style="display: none;"></div>
 <div id="AddEditModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
