--- a/RosterChallenge/Views/Shared/Dialogs/_confirmModal.cshtml
+++ b/RosterChallenge/Views/Shared/Dialogs/_confirmModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="confirmBackdrop" class="modal-backdrop"></div>
+﻿<div id="confirmBackdrop" class="modal-backdrop" style="display: none;"></div>
 <div id="confirmModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
