--- a/RosterChallenge/Views/Shared/Dialogs/_notificationModal.cshtml
+++ b/RosterChallenge/Views/Shared/Dialogs/_notificationModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="NotificationBackdrop" class="modal-backdrop"></div>
+﻿<div id="NotificationBackdrop" class="modal-backdrop" style="display: none;"></div>
 <div id="NotificationModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
