--- a/RosterChallenge/Views/Shared/_Layout.cshtml
+++ b/RosterChallenge/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/confirmModal.js"></script>
+    <script src="~/js/notificationModal.js"></script>
     @RenderSection("Styles", required: false)
     @RenderSection("Dialogs", required: false)
     @RenderSection("Scripts", required: false)
