fix checkbox not saving on add issue, make only body scroll

--- a/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
+++ b/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
@@ -19,7 +19,7 @@
                         <label class="floatingInput" for="streams">Streams</label>
                     </div>
                     <div class="mt-2">
-                        <input id="artist" type="checkbox" />
+                        <input id="artistPaid" type="checkbox" />
                         <label for="artist">Paid</label>
                     </div>
                 </form>
