--- a/RosterChallenge/Views/Shared/_Layout.cshtml
+++ b/RosterChallenge/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div id="mainBody" class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
