update sql connection string to be system agnostic fix step to any to allow all numbers for rate fix binding issue for edit and delete after the table updates

--- a/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
+++ b/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
@@ -11,7 +11,7 @@
                         <label class="floatingInput" for="artist">Artist</label>
                     </div>
                     <div class="form-floating mt-2">
-                        <input id="rate" required type="number" class="form-control" placeholder="Rate" />
+                        <input id="rate" required type="number" step="any" class="form-control" placeholder="Rate" />
                         <label class="floatingInput" for="rate">Rate</label>
                     </div>
                     <div class="form-floating mt-2">
