fix clicking on checkbox text not checking box

--- a/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
+++ b/RosterChallenge/Views/Home/Dialogs/_AddEditArtistModal.cshtml
@@ -20,7 +20,7 @@
                     </div>
                     <div class="mt-2">
                         <input id="artistPaid" type="checkbox" />
-                        <label for="artist">Paid</label>
+                        <label for="artistPaid">Paid</label>
                     </div>
                 </form>
             </div>
