make add button smaller fix edit issue where check box wasnt checking as expected

--- a/RosterChallenge/Views/Home/Index.cshtml
+++ b/RosterChallenge/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
                             $("#artist").val(result.artist.artist);
                             $("#rate").val(result.artist.rate);
                             $("#streams").val(result.artist.streams);
-                            $("#paid").val(result.artist.paid);
+                            $("#artistPaid").prop('checked', result.artist.paid);
                             $("#ID").val(result.artist.id);
                             openAddEditModal("Edit Artist");
                         }
