fix table header to top of page

--- a/RosterChallenge/Views/Home/Index.cshtml
+++ b/RosterChallenge/Views/Home/Index.cshtml
@@ -22,6 +22,8 @@
             <td><div class="float-right mx-3 fw-bold">Total Steams</div></td>
             <td><div class="float-right mx-3 fw-bold">Payout</div></td>
             <td><div class="float-right mx-3 fw-bold">Monthly Avg.</div></td>
+            <td class="sorter-false"></td>
+            <td class="sorter-false"></td>
         </tr>
     </thead>
     <tbody class="fixed-header-body">
