disable autocomplete on checkbox

--- a/RosterChallenge/Views/Home/Partials/_rosterRow.cshtml
+++ b/RosterChallenge/Views/Home/Partials/_rosterRow.cshtml
@@ -3,7 +3,7 @@
 <tr data-id="@Model.ID">
     <td>
         <div class="mx-4 mb-2 mt-2">
-            @Html.CheckBoxFor(m => m.paid, new { @class = "ml-2" })
+            @Html.CheckBoxFor(m => m.paid, new { @class = "ml-2", @autocomeplete = "off" })
         </div>
     </td>
     <td class="mx-3 mb-2 mt-2 artist">
